[tool.poetry]
name = "streamlit-test"
version = "0.1.0"
description = ""
authors = ["Kenta Fukuhara <105337464+KAkikakuFukuhara@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = ">=3.10, <4"
streamlit = "^1.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
